add furigana support